@@ -22,6 +22,8 @@
  - Fix: Unload, then reload a plugin on FreeBSD fails (Kevin Leung).
  - Plugins should now work on HPUX too.
  - Perl-plugin changes <fixme> (Lian Situ).
+ - Make menu keybindings work when the menubar is hidden on GTK 2.4.
+ - Support the new GTK 2.4 file chooser dialog.
  - 
  - 
  - Smaller bug fixes [950353] [945617] (Frederic Krueger).
